# mcp-server-hub

./: .gitignore  LICENSE  README.md
.github/workflows/: build-and-push.yml  python-docker.yml
dotnet/: ApiKeyMiddleware.cs  Dockerfile  Program.cs  api-tests.http  appsettings.json  mcp-server-hub.csproj  mcp-server-hub.sln  open-api.json  requests-a2a-calculator.http  requests-api-tests.http  requests-calculator-mcp-tool.http  requests-mcp-document-extraction.http  requests-mcp-tests.http  requests-status.http  requests.http
dotnet/Agents/: CalculatorAgent.cs
dotnet/Properties/: launchSettings.json
dotnet/Resources/: DocumentAnalysisSystemPrompt.txt
dotnet/Routes/: ACARoutes.cs  ToolRoutes.cs
dotnet/Tools/: CalculatorA2ATools.cs  DocumentExtrationTools.cs  TimeTools.cs  TranscriptionTools.cs  WeatherTools.cs  YouTubeTools.cs  swagger.json
dotnet/Utilities/: BlobStorageUtils.cs  MediaUtils.cs
python/: .dockerignore  Dockerfile  README.md  pyproject.toml
python/app/: __init__.py  main.py
